fix: spacings

--- a/src/components/work/work-item/work-item.scss
+++ b/src/components/work/work-item/work-item.scss
@@ -37,19 +37,19 @@
     }
 
     :first-child {
-      transition-delay: 0.2s;
+      transition-delay: 0.1s;
     }
 
     :nth-child(2) {
-      transition-delay: 0.3s;
+      transition-delay: 0.2s;
     }
 
     :nth-child(3) {
-      transition-delay: 0.4s;
+      transition-delay: 0.3s;
     }
 
     :nth-child(4) {
-      transition-delay: 0.5s;
+      transition-delay: 0.4s;
     }
   }
 
